--- a/README
+++ b/README
@@ -13,13 +13,17 @@ I) INTRODUCTION
     equal to or better than proprietary vendor-supplied drivers, and
     can be used for many of the most demanding printing tasks.  A
     complete list of supported printers may be found in the NEWS file.
-    Gutenprint also includes a plug-in for the GIMP image editor.
+    Gutenprint also includes an enhanced print plug-in for the GIMP
+    image editor, replacing the Gimp-Print 4.2-based plugin supplied
+    with GIMP 1.2, 2.0, and 2.2, and offering an alternative with
+    additional capabilities to the GtkPrint-based plugin supplied with
+    GIMP 2.4 and beyond.
 
     Gutenprint has been renamed in order to clearly distinguish it
     from the GIMP.  While this package started out as the Print plugin
     for the GIMP, it has expanded into a collection of general purpose
-    printer drivers, and the Print plugin for the GIMP is now only a
-    small (but important) piece of the package.  Furthermore, the name
+    printer drivers, and the enhanced Print plugin for the GIMP is now
+    only a small part of the package.  Furthermore, the name
     Gutenprint recognizes Johannes Gutenberg, the inventor of the
     movable type printing press.  Finally, the word "guten" means
     "good" in German.
@@ -75,11 +79,16 @@ A) OVERVIEW
 
       - The core driver library (required for everything else)
       - A CUPS (Common UNIX Printing System) driver
-      - A Print plug-in for the GIMP
+      - An enhanced Print plug-in for the GIMP
       - Support for the Foomatic spooler configuration system
       - A Ghostscript driver using the IJS plugin facility
       - A command-line utility to administer and maintain Epson
         printers
+
+    This package requires the use of GNU Make to compile.  On systems
+    with both GNU make and another make installed, GNU make may be
+    named `gmake' or `gnumake'.  BSD users in particular must take
+    care to use 'gmake'.
 
     The general procedure to build Gutenprint is as follows:
 
@@ -99,59 +108,58 @@ A) OVERVIEW
     a summary of its choices.  Please ensure that it is correct before
     proceeding.  The summary looks like this:
 
-    Build Summary:
-    ----- --------
+	Configuration Summary:
+	------------- --------
 
-    If you have any problems, please report the information below to
-    gimp-print-devel@lists.sourceforge.net
+	If you have any problems, please report the information below to
+	gimp-print-devel@lists.sourceforge.net
 
-      Release: gutenprint 5.0.0 generated on 22 May 2006
+	================================================================
+	  Release: gutenprint 5.0.0 generated on 01 Jul 2006
 
-      Features:
-	Build CUPS:                                 yes, installing in /usr
-	    Build CUPS PPD files:                   yes
-		Build translated CUPS PPD files:    no
-		Build simplified CUPS PPD files:    no
-		Generate PS level 3 CUPS PPD files: yes
-	    Install CUPS PPD files at top level:    no
-	    Build genppd statically:                yes
-	Build Ghostscript IJS driver:               yes
-	Build Foomatic data:                        yes
-	    Build Foomatic 3.x data:                yes
-	Build GIMP 1.2 plugin:                      yes
-	Build GIMP 2.0 plugin:                      yes
-	    Install plugin in home directory:       no
-	Build EPSON Stylus utility:                 yes
-	Build test programs:                        yes
-	Build testpattern generator:                yes
+	  Features:
+	    Build CUPS:                                 yes, installing in /usr
+		Build CUPS PPD files:                   yes
+		    Build translated CUPS PPD files:    no
+		    Build simplified CUPS PPD files:    no
+		    Generate PS level 3 CUPS PPD files: yes
+		Install CUPS PPD files at top level:    no
+		Build genppd statically:                yes
+	    Build Ghostscript IJS driver:               yes
+	    Build Foomatic data:                        yes
+		Build Foomatic 3.x data:                yes
+	    Build enhanced Print plugin for the GIMP:   yes
+		Build GIMP 1.2 plugin:                  yes
+		Build GIMP 2.x plugin:                  yes
+		    GIMP 2.x plugin will be named:      print
+		Install plugin(s) in home directory:    no
+	    Build EPSON Stylus utility:                 yes
+	    Build test programs:                        yes
+	    Build testpattern generator:                yes
 
-    Installation summary:
-	Installation prefix:                        /usr/local
-	Data directory:                             /usr/local/share/gutenprint
-	Library directory:                          /usr/local/lib/gutenprint
-	XML data directory:                         /usr/local/share/gutenprint/5.0.0/xml
-	Module directory:                           /usr/local/lib/gutenprint/5.0.0/modules
-	Install user guide:                         yes
-	Install sample images:                      yes
+	Installation summary:
+	    Installation prefix:                        /usr/local
+	    Data directory:                             /usr/local/share/gutenprint
+	    Library directory:                          /usr/local/lib/gutenprint
+	    XML data directory:                         /usr/local/share/gutenprint/5.0.0/xml
+	    Module directory:                           /usr/local/lib/gutenprint/5.0.0/modules
+	    Install user guide:                         yes
+	    Install sample images:                      yes
 
-    Configuration:
-	Compiler options:                           -g -O2  -Wall -Wcast-align -Wstrict-prototypes -Wmissing-prototypes -Wmissing-declarations -Wnested-externs -Wwrite-strings -Werror-implicit-function-declaration -Winline -finline-limit=1048576 -pedantic -Waggregate-return -Wcast-qual -Wshadow -Wredundant-decls
-	Build static libraries:                     yes
-	Build shared libraries:                     no
-	Maintainer mode:                            yes
-	Generate profiling information:             no
-	Generate debugging symbols:                 no
-	Use modules:                                static
-	Use readline libraries:                     yes, extra arguments: -lncurses
+	General configuration:
+	    Compiler options:                           -g -O2  -Wall -Wcast-align -Wstrict-prototypes -Wmissing-prototypes -Wmissing-declarations -Wnested-externs -Wwrite-strings -Werror-implicit-function-declaration -Winline -finline-limit=1048576 -pedantic -Waggregate-return -Wcast-qual -Wshadow -Wredundant-decls
+	    Build static libraries:                     yes
+	    Build shared libraries:                     no
+	    Maintainer mode:                            yes
+	    Generate profiling information:             no
+	    Generate debugging symbols:                 no
+	    Use modules:                                static
+	    Use readline libraries:                     yes, extra arguments: -lncurses
+	================================================================
 
 
-    This package requires the use of GNU Make to compile.  On systems
-    with both GNU make and another make installed, GNU make may be
-    named `gmake' or `gnumake'.  BSD users in particular must take
-    care to use 'gmake'.
-
-    The CUPS, GIMP, Foomatic, and IJS drivers require that the
-    appropriate packages be installed on your system.  Many
+    The CUPS, GIMP, Foomatic, and Ghostscript components require that
+    the appropriate packages be installed on your system.  Many
     distribution vendors separate packages into runtime and
     development packages.  The development packages are required in
     order to successfully compile Gutenprint.  In many cases the
@@ -504,12 +512,22 @@ C) FOOMATIC
 
 D) THE GIMP
 
-    Gutenprint may be used as a plug-in for the GIMP, providing the
-    ability to print images.  If you wish to do so, you must use the
-    GIMP 1.2.3 or above on the 1.2 line, or any GIMP 2.x release (2.0,
-    2.1, 2.2, etc.)  Please read the release notes in addition to this
-    README, as there have been some changes in procedure since
-    Gimp-Print 4.2 if you are using certain versions of the GIMP.
+    Gutenprint may be used with an enhanced Print plug-in for the
+    GIMP, providing the ability to print images.  If you wish to do
+    so, you must use the GIMP 1.2.3 or above on the 1.2 line, or any
+    GIMP 2.x release (2.0, 2.1, 2.2, etc.)  Please read the release
+    notes in addition to this README, as there have been some changes
+    in procedure since Gimp-Print 4.2 if you are using certain
+    versions of the GIMP.
+
+    The enhanced Print plugin for the GIMP replaces the Gimp-Print
+    4.2-based plugin provided with the GIMP 2.0 and 2.2.  As of the
+    GIMP 2.4, the GIMP team provides a new Print plugin based on the
+    GtkPrint framework.  This plugin provides standard printing
+    capabilities, but does not provide all of the new Gutenprint 5.0
+    features.  Therefore, the enhanced Print plugin for the GIMP
+    distributed with Gutenprint does not replace that plugin, but is
+    installed alongside that plugin.
 
     If your system separates development packages from runtime
     packages, you will typically have to install development packages
