In the GIMP 2.4 and above (forthcoming as of Gutenprint 5.0 release), the enhanced Print plugin will be named "Print with Gutenprint" so as not to collide with the GtkPrint-based plugin bundled with that version of the GIMP.  The Print plugin bundled with GIMP 2.0 and 2.2 is based on Gimp-Print 4.2; the Print plugin in this package simply replaces the Print plugin in those versions of the GIMP.

--- a/NEWS
+++ b/NEWS
@@ -197,6 +197,9 @@ A) MAJOR CHANGES BETWEEN GUTENPRINT 5.0.0 RELEASE CANDIDATE 3 AND
      plugin in this package simply replaces the Print plugin in those
      versions of the GIMP.
 
+  10) Crashes in the Ghostscript and IJS drivers on certain non-Linux
+     platforms have been fixed.
+
 
 ----------------
 
