--- a/po/da.po
+++ b/po/da.po
@@ -1,15 +1,15 @@
 # Danish translation of gutenprint-5.0.0.po
 # Copyright (C) 2001, 2006 Free Software Foundation, Inc.
 #
-# Mogens Jaeger <mogens@jaeger.tf>, 2005, 2006.
 # Keld Simonsen <keld@dkuug.dk>, 2001.
 # Kjartan Maraas <kmaraas@gnome.org>, 2001.
+# Mogens Jaeger <mogens@jaeger.tf>, 2006.
 msgid ""
 msgstr ""
 "Project-Id-Version: gutenprint 5.0.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-05-12 20:55-0400\n"
-"PO-Revision-Date: 2006-07-27 21:42+0200\n"
+"PO-Revision-Date: 2006-07-20 12:56+0200\n"
 "Last-Translator: Mogens Jaeger <mogens@jaeger.tf>\n"
 "Language-Team: Danish <dansk@dansk-gruppen.dk>\n"
 "MIME-Version: 1.0\n"
@@ -1768,7 +1768,7 @@ msgstr "Justér sortbalance"
 
 #: src/main/print-pcl.c:182
 msgid "Plain"
-msgstr "Alm."
+msgstr "Alm"
 
 #: src/main/print-pcl.c:183
 msgid "Bond"
@@ -6376,7 +6376,7 @@ msgstr "Kurvetype"
 
 #: src/gutenprintui2/curve.c:131
 msgid "Is this curve linear, spline interpolated, or free-form"
-msgstr "Er denne kurve lineær, tilpasset med interpolering eller fri-form"
+msgstr "Er denne kurve lineær, tilpasset med interpolation eller fri-form"
 
 #: src/gutenprintui2/curve.c:139
 msgid "Minimum X"
@@ -6448,9 +6448,8 @@ msgstr "Ekstra 5"
 
 #. TRANSLATORS: "Gutenprint" is a proper name, not a description
 #: src/cups/genppd.c:189 src/cups/genppd.c:198
-#, fuzzy
 msgid "Gutenprint"
-msgstr "Om Gutenprint"
+msgstr "Gutenprint"
 
 #: src/cups/genppd.c:890
 msgid "English"
@@ -7472,6 +7471,3 @@ msgstr "ERROR: ijsgutenprint: Forkerte parametre; kan ikke fortsætte!\n"
 #, c-format
 msgid "ERROR: ijsgutenprint: Get next row failed at %.0f\n"
 msgstr "ERROR: ijsgutenprint: Hentning af næste række fejlede ved %.0f\n"
-
-#~ msgid "Please specify a raw device\n"
-#~ msgstr "Angiv en ufiltreret enhed\n"
