--- a/README
+++ b/README
@@ -1,21 +1,22 @@
-Welcome to Gutenprint 5.0.0!  Please read these notes carefully.
+Welcome to Gutenprint 5.1.0!  Please read these notes carefully.
 
 ================================================================
 
 I) INTRODUCTION
 
-    This is Gutenprint version 5.0.0, the first stable release of
-    Gutenprint 5.0.  Gutenprint, formerly named Gimp-Print, is a suite
-    of printer drivers that may be used with most common UNIX print
-    spooling systems, including CUPS, lpr, LPRng, or others.  These
-    drivers provide high quality printing for UNIX (including
-    Macintosh OS X 10.2 and newer) and Linux systems in many cases
-    equal to or better than proprietary vendor-supplied drivers.
-    Gutenprint also includes an enhanced print plug-in for the GIMP
-    image editor, replacing the Gimp-Print 4.2-based plugin supplied
-    with GIMP 1.2, 2.0, and 2.2, and offering an alternative with
-    additional capabilities to the GtkPrint-based plugin supplied with
-    GIMP 2.4 and beyond.
+    This is Gutenprint version 5.1.0, the first development release of
+    Gutenprint 5.1 that will eventually lead to Gutenprint 5.2.
+    Gutenprint, formerly named Gimp-Print, is a suite of printer
+    drivers that may be used with most common UNIX print spooling
+    systems, including CUPS, lpr, LPRng, or others.  These drivers
+    provide high quality printing for UNIX (including Macintosh OS X
+    10.2 and newer) and Linux systems in many cases equal to or better
+    than proprietary vendor-supplied drivers.  Gutenprint also
+    includes an enhanced print plug-in for the GIMP image editor,
+    replacing the Gimp-Print 4.2-based plugin supplied with GIMP 1.2,
+    2.0, and 2.2, and offering an alternative with additional
+    capabilities to the GtkPrint-based plugin supplied with GIMP 2.4
+    and beyond.
 
     Gutenprint has been renamed in order to clearly distinguish it
     from the GIMP.  While this package started out as the Print plugin
@@ -115,7 +116,7 @@ A) OVERVIEW
 	gimp-print-devel@lists.sourceforge.net
 
 	================================================================
-	  Release: gutenprint 5.0.0 generated on 22 Jul 2006
+	  Release: gutenprint 5.1.0 generated on 17 Sep 2006
 
 	  Features:
 	    Build CUPS:                                 yes, installing in /usr
@@ -129,9 +130,7 @@ A) OVERVIEW
 	    Build Foomatic data:                        yes
 		Build Foomatic 3.x data:                yes
 	    Build enhanced Print plugin for the GIMP:   yes
-		Build GIMP 1.2 plugin:                  yes
-		Build GIMP 2.x plugin:                  yes
-		    GIMP 2.x plugin will be named:      print
+		GIMP plugin will be named:              print
 		Install plugin(s) in home directory:    no
 	    Build EPSON Stylus utility:                 yes
 	    Build test programs:                        yes
@@ -141,12 +140,12 @@ A) OVERVIEW
 	    Installation prefix:                        /usr/local
 	    Data directory:                             /usr/local/share/gutenprint
 	    Library directory:                          /usr/local/lib/gutenprint
-	    XML data directory:                         /usr/local/share/gutenprint/5.0.0/xml
-	    Module directory:                           /usr/local/lib/gutenprint/5.0.0/modules
+	    XML data directory:                         /usr/local/share/gutenprint/5.1.0/xml
+	    Module directory:                           /usr/local/lib/gutenprint/5.1.0/modules
 	    Install sample images:                      yes
 
 	General configuration:
-	    Compiler options:                           -g -O2  -Wall -Wcast-align -Wstrict-prototypes -Wmissing-prototypes -Wmissing-declarations -Wnested-externs -Wwrite-strings -Werror-implicit-function-declaration -Winline -finline-limit=1048576 -pedantic -Waggregate-return -Wcast-qual -Wshadow -Wredundant-decls
+	    Compiler options:                           -Disfinite=finite  -O6  -Wall -Wcast-align -Wstrict-prototypes -Wmissing-prototypes -Wmissing-declarations -Wnested-externs -Wwrite-strings -Werror-implicit-function-declaration -Winline -finline-limit=1048576 -pedantic -Waggregate-return -Wcast-qual -Wshadow -Wredundant-decls
 	    Build static libraries:                     yes
 	    Build shared libraries:                     no
 	    Maintainer mode:                            yes
@@ -155,7 +154,6 @@ A) OVERVIEW
 	    Use modules:                                static
 	    Use readline libraries:                     yes, extra arguments: -lncurses
 	================================================================
-
 
     The CUPS, GIMP, Foomatic, and Ghostscript components require that
     the appropriate packages be installed on your system.  Many
@@ -518,13 +516,11 @@ C) FOOMATIC
 
 D) THE GIMP
 
-    Gutenprint may be used with an enhanced Print plug-in for the
-    GIMP, providing the ability to print images.  If you wish to do
-    so, you must use the GIMP 1.2.3 or above on the 1.2 line, or any
-    GIMP 2.x release (2.0, 2.1, 2.2, etc.)  Please read the release
-    notes in addition to this README, as there have been some changes
-    in procedure since Gimp-Print 4.2 if you are using certain
-    versions of the GIMP.
+    Gutenprint may be used with an enhanced Print plug-in for the GIMP
+    (2.0 and above), providing the ability to print images.  Please
+    read the release notes in addition to this README, as there have
+    been some changes in procedure since Gimp-Print 4.2 if you are
+    using certain versions of the GIMP.
 
     The enhanced Print plugin for the GIMP replaces the Gimp-Print
     4.2-based plugin provided with the GIMP 2.0 and 2.2.  As of the
@@ -557,9 +553,6 @@ D) THE GIMP
     The Gutenprint 5.0-based plugin can read settings from previous
     versions of Gimp-Print, but the configuration file format in
     Gutenprint 5.0 cannot be read by older versions of Gimp-Print.
-
-    The GIMP 1.2 will not be supported in Gutenprint 5.1 and beyond.
-    However, all Gutenprint 5.0 releases will support the GIMP 1.2.
 
     The GIMP 2.x plugin may eventually be migrated to the GIMP project
     for a future GIMP release and be removed from the Gutenprint
