rename olympus driver to dyesub (i.e. all olympus_* func, struct and defs to dyesub_*)

--- a/AUTHORS
+++ b/AUTHORS
@@ -75,7 +75,7 @@ Mark Tomlinson		<mark.tomlinson@xtra.co.nz>
 	Implementation of Raph Levien's EvenTone dither
 
 Michael Mraka		<michael.mraka@linux.cz>
-	Olympus driver
+	DyeSub (formerly Olympus) driver
 	
 Michael Natterer	<mitschel@cs.tu-berlin.de>
 	New user interface
